feat: add imbalance class balance correction to models

--- a/code/Part 2 - Supervised Learning Model.ipynb
+++ b/code/Part 2 - Supervised Learning Model.ipynb
@@ -643,7 +643,7 @@
    "source": [
     "# Apply SMOTE to de data\n",
     "\n",
-    "sm = SMOTE(random_state=42, )\n",
+    "sm = SMOTE(random_state=42)\n",
     "X, y = sm.fit_sample(X, y)"
    ]
   },
